    - added --fullscreen -flag for enabling fullscreen on startup [unstable at the moment]

    fixed bugs:
        - state of block may not be set correctly in some cases
        - memory leak with block inventories
        - offhand slot gets cleared when closing inventory
        - memory leak with block instances

    planned:
        - search why generation takes so long [issue 166]
        - speed up chunk accessing [issue 164 & 165]
        - make startup fail-save [issue 167]
        - fix issue 137, 161
        - optimize world storage (also issue 159)
        - check for the reason of issue 157 and fix if possible


changelog of snapshot 20w14a
    - added new event: "stage:blockitemfactory:finish"
    - cleaned up base classes for block and item
    - chunk entries containing positions are mostly stored relative to the chunk decreasing save file size
    - changed some internal inventory interaction things
    - on_shift_click can now return True when it should interrupt the following logic
    - slots can now handle an key press
    - rewritten mouse interaction system to support dragging over more than one slot & better shift-clicking
    - moved Entity-class into entity/Entity.py
    - entities are now saved in saves
    - added EntityHandler with entity-registry
    - made function draw and tick called of entity
    - added EntityRenderer with parser of model files
    - added renderer for player
    - added saves for entities
    - added /summon command
    - added loading phase for entities
    - added player skins based on the player name downloaded from the official mojang servers

    fixed bugs:
        - game gives out exceptions when trying to load an non-existing world
        - internal mouse-position error when dragging
        - block-looking-at position lable was inverted to the gamerule
        - crash when inventory slot count decreases between two loads of an world


changelog of snapshot 20w12b [released on 21.03.2020]