@@ -171,7 +171,7 @@ def transform_name(file: str) -> str:
         else:
             f = "assets/{}/textures/{}/{}.png".format(f[0], f[1].split("/")[0], "/".join(f[1].split("/")[1:]))
         return f
-    raise NotImplementedError("can't transform name {} to valid path".format(file))
+    raise NotImplementedError("can't transform name '{}' to valid path".format(file))
 
 
 def exists(file, transform=True):
@@ -182,7 +182,7 @@ def exists(file, transform=True):
         for x in RESOURCE_LOCATIONS:
             if x.path == resource:
                 return x.is_in_path(file)
-        raise RuntimeError("can't find resource named {}".format(resource))
+        raise RuntimeError("can't find resource named '{}'".format(resource))
     for x in RESOURCE_LOCATIONS:
         if x.is_in_path(file):
             return True
