@@ -14,6 +14,7 @@ import pyglet
 import ResourceLocator
 import time
 import util.opengl
+import event.EventHandler
 
 
 base: pyglet.image.AbstractImage = ResourceLocator.read("gui/icons", "pyglet")
@@ -74,14 +75,21 @@ class InventoryPlayerHotbar(gui.Inventory.Inventory):
 
     def __init__(self):
         gui.Inventory.Inventory.__init__(self)
-        self.selected_sprite = pyglet.sprite.Sprite(ResourceLocator.read("build/texture/gui/selected_slot.png",
-                                                                         "pyglet"))
+        if ResourceLocator.exists("build/texture/gui/selected_slot.png"):
+            self.get_select_sprite()
+        else:
+            self.selected_sprite = None
+            event.EventHandler.PUBLIC_EVENT_BUS.subscribe("stage:blockitemfactory:finish", self.get_select_sprite)
         self.lable = pyglet.text.Label(color=(255, 255, 255, 255))
         self.last_index = 0
         self.last_item = None
         self.time_since_last_change = 0
 
         self.xp_level_lable = pyglet.text.Label(color=(92, 133, 59), anchor_x="center")
+
+    def get_select_sprite(self):
+        self.selected_sprite = pyglet.sprite.Sprite(ResourceLocator.read("build/texture/gui/selected_slot.png",
+                                                                         "pyglet"))
 
     @staticmethod
     def get_config_file():
