@@ -126,4 +126,4 @@ issue 167:
 issue 168:
     bug: when starting in-game generation, game hangs for an short moment
 
-[169-171]
+[169-172]
